// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar correctly filters and sorts results 1`] = `
Array [
  Object {
    "append": undefined,
    "className": "euiSelectableTemplateSitewide__listItem",
    "key": "Canvas",
    "label": "Canvas",
    "prepend": undefined,
    "title": "Canvasundefinedundefined",
    "url": "/app/test/Canvas",
  },
  Object {
    "append": undefined,
    "className": "euiSelectableTemplateSitewide__listItem",
    "key": "Discover",
    "label": "Discover",
    "prepend": undefined,
    "title": "Discoverundefinedundefined",
    "url": "/app/test/Discover",
  },
  Object {
    "append": undefined,
    "className": "euiSelectableTemplateSitewide__listItem",
    "key": "Graph",
    "label": "Graph",
    "prepend": undefined,
    "title": "Graphundefinedundefined",
    "url": "/app/test/Graph",
  },
]
`;

exports[`SearchBar correctly filters and sorts results 2`] = `
Array [
  Object {
    "append": undefined,
    "className": "euiSelectableTemplateSitewide__listItem",
    "key": "Discover",
    "label": "Discover",
    "prepend": undefined,
    "title": "Discoverundefinedundefined",
    "url": "/app/test/Discover",
  },
  Object {
    "append": undefined,
    "className": "euiSelectableTemplateSitewide__listItem",
    "key": "My Dashboard",
    "label": "My Dashboard",
    "meta": Array [
      Object {
        "text": "Test",
      },
    ],
    "prepend": undefined,
    "title": "My Dashboard •  Test",
    "url": "/app/test/My Dashboard",
  },
]
`;

exports[`SearchBar supports keyboard shortcuts 1`] = `
<input
  aria-activedescendant=""
  aria-haspopup="listbox"
  aria-label="Filter options"
  autocomplete="off"
  class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--compressed euiSelectableSearch euiSelectableTemplateSitewide__search"
  data-test-subj="header-search"
  placeholder="Search Elastic"
  type="search"
  value=""
/>
`;
